feat(sandalphon): update default statement texts based on TOKI format